refactor: Clean up confusing api calls